gap fix

--- a/cassino/assets/css/main.css
+++ b/cassino/assets/css/main.css
@@ -369,7 +369,7 @@ main {
 
 #categoriaTodosJogos {
     display: grid;
-    gap: var(--gapGame);
+    gap: 2rem var(--gapGame);
     grid-template-columns: repeat(3, 1fr);
 }
 
